assets/assets/css/main.css
@charset "UTF-8";

/* Custom typeface — Open Sans (sans-serif) */

@font-face {
  font-family: "OpenSans";
  src: url("../fonts/OpenSans-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Bold */
@font-face {
  font-family: "OpenSans";
  src: url("../fonts/OpenSans-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* Italic */
@font-face {
  font-family: "OpenSans";
  src: url("../fonts/OpenSans-Italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

/* Bold Italic */
@font-face {
  font-family: "OpenSans";
  src: url("../fonts/OpenSans-BoldItalic.woff2") format("woff2");
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}

/* Custom typeface — Google Sans Code (monospace) */

/* Regular */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Bold */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* Italic */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

/* Bold Italic */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-BoldItalic.woff2") format("woff2");
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}

/* Custom typeface — Slackside One (display font) */

/* Regular */
@font-face {
  font-family: "SlacksideOne";
  src: url("../fonts/SlacksideOne-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: block;
}

/* Global theme */

:root {
  --bg-color: #f2f2f2;
  --main-color: black;
  --neutral-color: rgba(128, 128, 128, 0.2);
  --bg-extra-color: #d9d9d9;
  --main-extra-color: gray;
  --colored-text: #0000f5;
}

html[data-theme="dark"] {
  --bg-color: #2b2b2b;
  --main-color: #dedede;
  --bg-extra-color: #454545;
  --main-extra-color: gray;
  --colored-text: greenyellow;
}

html[data-theme="dark"] .social-media > li > a > img {
  filter: invert(1);
}

html[data-theme="dark"] #guestbook {
  filter: invert(1);
  mix-blend-mode: lighten;
}

body {
  background-color: var(--bg-color);
  color: var(--main-color);
  font-family: OpenSans, "Segoe UI", sans-serif;
  font-size: 0.9rem;
  scrollbar-gutter: stable;
  overflow-y: scroll;
}

* {
  transition: background-color 0.3s, color 0.3s, border-color 0.3s, filter 0.3s;
}

/* Skip to main link */

.skip-link {
  position: absolute;
  inset-inline-start: -10000px;
  inset-block-start: auto;
  inline-size: 1px;
  block-size: 1px;
  overflow: hidden;
}

.skip-link:focus {
  position: static;
  inline-size: auto;
  block-size: auto;
}

/* Layout */

.flex-container {
  display: flex;
  gap: 2rem;
  margin: 0 auto;
  max-inline-size: fit-content;
}

.sidebar {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  flex-shrink: 0;
  position: sticky;
  inset-block-start: 8px;
  max-block-size: calc(100vh - 2rem);
  inline-size: 10rem;
  overflow-y: auto;
}

.primary {
  inline-size: 35rem;
}

/* Sidebar content */

.latest-artwork {
  all: revert;
  margin: 0;
  inline-size: 9rem;
  margin-block-start: 2rem;
  padding-block-end: 1rem;
  border-block-end: 0.07rem solid var(--main-color);
}

.latest-artwork > a:has(> .preview) {
  inline-size: 7rem;
}

nav {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

nav > div {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  white-space: nowrap;
}

.social-media {
  display: flex;
  gap: 0.5rem;
  padding: 0;
  margin: 0;
  list-style: none;
}

.social-media > li > a > img {
  inline-size: 1.7rem;
}

footer {
  inline-size: 9rem;
  border-block-start: 0.07rem solid var(--main-color);
  padding-block-start: 1rem;
}

footer > p {
  font-size: 0.7rem;
  margin: 0;
}

/* Header & main section */

header {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  padding: 2rem 0;
  margin-block-end: 1.5rem;
  border-block-end: 0.07rem solid var(--main-color);
}

header > * {
  margin: 0;
}

.logo {
  grid-row: span 2 / span 2;
  font-family: SlackSideOne, sans-serif;
  font-size: 3rem;
  line-height: 3rem;
}

#theme-menu {
  display: flex;
  align-items: center;
  gap: 0.3rem;
  align-self: start;
  justify-self: end;
  inline-size: fit-content;
}

#theme-menu > * {
  margin: 0;
}

#theme-menu > button {
  border: 0;
  padding: 0;
  background-color: transparent;
}

#theme-menu > button:hover {
  cursor: pointer;
}

#theme-menu > button > img {
  block-size: 1rem;
  aspect-ratio: 1 / 1;
}

#theme-menu > button > img:hover {
  filter: opacity(0.5);
}

#theme-menu > button > img:active {
  filter: opacity(0.1);
  transition: none;
}

#theme-no-js {
  display: none;
}

.version {
  grid-column-start: 2;
  align-self: end;
  justify-self: end;
  inline-size: fit-content;
}

#main {
  scroll-margin-block-start: 12rem;
}

/* General styling */

h1 {
  font-size: 1.2rem;
}

h2 {
  font-size: 1rem;
}

h3,
h4 {
  font-size: 0.9rem;
}

a {
  color: var(--main-color);
}

a:hover {
  color: var(--main-extra-color);
}

a:active {
  color: var(--neutral-color);
  transition: none;
}

img {
  display: block;
}

.img-inline {
  display: inline;
}

pre {
  white-space: pre-wrap;
  word-break: break-all;
}

code,
kbd {
  font-family: GoogleSansCode, Consolas, monospace;
  font-size: 0.75rem;
  background-color: var(--neutral-color);
  display: inline-block;
  max-inline-size: fit-content;
  padding: 0.04rem 0.1rem;
  border-radius: 0.2rem;
}

hr {
  border: none;
  margin: 1.3rem auto 1rem;
}

hr::before {
  content: "***";
  display: block;
  text-align: center;
}

details {
  margin: 1rem auto;
  border: 0.1rem solid var(--main-color);
  border-radius: 0.2rem;
}

details > *:not(summary) {
  margin: 1rem;
}

summary {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  list-style: none;
}

summary::after {
  /* Rotating triangle for <details> */
  content: "";
  transition: 0.3s;
  border-block-start: 0.4rem solid var(--main-color);
  border-inline: 0.25rem solid transparent;
}

details[open] > summary::after {
  transform: rotate(-180deg);
}

summary::-webkit-details-marker {
  display: none;
}

/* End of segment */

/* <details> CSS-only animation, with presets for different sizes */

details::details-content {
  max-block-size: 0;
  opacity: 0;
  transition: opacity 0.4s, max-block-size 0.15s linear,
    content-visibility 0.15s linear;
  transition-behavior: allow-discrete;
  overflow: hidden;
}

details[open]::details-content {
  opacity: 1;
  max-block-size: 15rem; /* max-block-size has to be hard-coded for the animation to work (unfortunately) */
}

.animation-medium::details-content {
  transition: opacity 0.4s, max-block-size 0.2s linear,
    content-visibility 0.2s linear;
  transition-behavior: allow-discrete;
}

.animation-medium[open]::details-content {
  max-block-size: 30rem;
}

.animation-long::details-content {
  transition: opacity 0.4s, max-block-size 0.25s linear,
    content-visibility 0.25s linear;
  transition-behavior: allow-discrete;
}

.animation-long[open]::details-content {
  max-block-size: 60rem;
}

.animation-extra-long::details-content {
  transition: opacity 0.4s, max-block-size 0.3s linear,
    content-visibility 0.3s linear;
  transition-behavior: allow-discrete;
}

.animation-extra-long[open]::details-content {
  max-block-size: 100rem;
}

/* End of segment */

summary > h3 {
  margin: 0;
}

summary:hover {
  cursor: pointer;
  background-color: var(--bg-extra-color);
}

figure {
  padding: 1.25rem;
  margin: 1rem auto;
  border: 0.1rem solid var(--main-color);
  border-radius: 0.2rem;
}

figure > a,
figure > img {
  margin-block-end: 0.5rem;
}

article {
  display: grid;
  gap: 0.5rem;
  grid-template-columns: repeat(2, 1fr);
  padding: 1.25rem;
  margin: 1rem auto;
  border: 0.1rem solid var(--main-color);
  border-radius: 0.2rem;
}

article > * {
  margin: 0;
}

article > .date {
  justify-self: end;
}

article > img,
article > a,
article > .description {
  grid-column: span 2 / span 2;
}

article > img {
  max-inline-size: 10rem;
  border: 0.07rem solid var(--main-color);
  aspect-ratio: 1 / 1;
}

#guestbook {
  inline-size: 100%;
  block-size: 31.5rem;
  mix-blend-mode: darken;
  border: none;
  transition: opacity;
}

/* Gallery */

.gallery {
  display: grid;
  gap: 0.5rem;
}

.gallery {
  grid-template-columns: repeat(4, 1fr);
}

/* Specific image templates */

a:has(> .preview) {
  display: block;
  border: 0.07rem solid var(--main-color);
  aspect-ratio: 1 / 1;
}

.preview {
  inline-size: 100%;
}

a:has(> .preview):hover {
  filter: brightness(1.15);
}

a:has(> .preview):active {
  border: 0.07rem solid var(--neutral-color);
}

div:has(> .artwork) {
  border: 0.07rem solid var(--main-color);
}

.artwork {
  max-inline-size: 100%;
  max-block-size: 30rem;
  margin: 0 auto;
}

.generic-image {
  max-inline-size: 100%;
  border: 0.07rem solid var(--main-color);
  aspect-ratio: 16/9;
}

a:has(> .small-button) {
  display: block;
  inline-size: fit-content;
}

a:has(> .small-button):hover {
  filter: brightness(1.15);
}

.small-button {
  /* code to make 88x31 buttons look crispier and negate browser zoom */
  inline-size: 4.2rem;
  aspect-ratio: 88/31;
  transform: scale(1);
}

/* Blog list page styles */

.blog-list {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  padding: 0;
  list-style: none;
}

.blog-item > div {
  display: flex;
  gap: 0.7rem;
}

.blog-item > div > * {
  margin: 0;
}

/* Old website designs showcase styles */

.old-design {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.old-design > p {
  margin: 0;
}

.old-design > a:has(> .generic-image) {
  border: 0.07rem solid var(--main-color);
  aspect-ratio: 16/9;
}

.old-design > a:has(> .generic-image):hover {
  filter: brightness(1.15);
}

.old-design > a:has(> .generic-image):active {
  border: 0.07rem solid var(--neutral-color);
}

.old-design > a > .generic-image {
  border: none;
  aspect-ratio: revert-layer;
}

/* Stamp collection */
div:has(> .stamp) {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.stamp {
  inline-size: 4.6rem;
  aspect-ratio: 99/56;
  transform: scale(1);
}

.favorite-media {
  display: flex;
  gap: 1rem;
  > img {
    margin: 0;
    aspect-ratio: 2/3;
    block-size: 15.5rem;
    border: 0.07rem solid var(--main-color);
  }
  > figcaption {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    > p {
      margin: 0;
    }
  }
}

/* CSS for 404 page */
.four-o-four {
  display: flex;
  flex-direction: column;
  justify-content: center;
  block-size: 98vh;
  > h1 {
    font-size: 4rem;
    margin: 0 auto;
  }
  > p {
    margin: 0 auto 1rem;
  }
}

/* Ocasionally used text styles */

.text-center {
  text-align: center;
}

.text-uppercase {
  text-transform: uppercase;
}

.text-colored {
  color: var(--colored-text);
}

.text-breakall {
  word-break: break-all;
}

/* OS dark theme preference if not manually set */

@media (prefers-color-scheme: dark) {
  html:not([data-theme]) {
    --bg-color: #2b2b2b;
    --main-color: #dedede;
    --bg-extra-color: #454545;
    --main-extra-color: gray;
    --colored-text: greenyellow;
  }

  html:not([data-theme]) .social-media > li > a > img {
    filter: invert(1);
  }

  html:not([data-theme]) #guestbook {
    filter: invert(1);
    mix-blend-mode: lighten;
  }
}

/* CSS for smaller screens */

@media (max-width: 600px) {
  .gallery {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (max-width: 500px) {
  details > *:not(summary) {
    margin: 0.5rem;
  }

  .gallery {
    gap: 0.3rem;
  }
}

